# neural-net

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: utils.cmake
src/: BatchSlicer.cpp  BatchSlicer.h  FitParameters.h  Layer.cpp  Layer.h  LinearPrimitives.cpp  LinearPrimitives.h  Network.cpp  Network.h  Random.cpp  Random.h  Sequential.cpp  Sequential.h  Types.h
src/ActivationFunctions/: ActivationFunction.h  Sigmoid.cpp  Sigmoid.h
src/Datasets/MNIST/: MnistDataset.cpp  MnistDataset.h
src/Layers/: Layer.cpp  Layer.h  Linear.cpp  Linear.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h
src/Layers/Activations/: Activation.h  ActivationNone.cpp  ActivationNone.h  LeakyReLU.cpp  LeakyReLU.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h  Tanh.cpp  Tanh.h
src/LossFunctions/: BinaryCrossEntropy.cpp  BinaryCrossEntropy.h  CategoricalCrossEntropy.cpp  CategoricalCrossEntropy.h  LossFunction.h  MAE.cpp  MAE.h  MSE.cpp  MSE.h
src/Metrics/: Metric.cpp  Metric.h  Metrics.h
src/Optimizers/: Adam.cpp  Adam.h  Optimizer.cpp  Optimizer.h  Optimizers.cpp  Optimizers.h  RMSProp.cpp  RMSProp.h  SGD.cpp  SGD.h
src/Utils/: BatchSlicer.cpp  BatchSlicer.h  DataManipulate.cpp  DataManipulate.h  DataSplit.cpp  DataSplit.h  Random.cpp  Random.h  Timer.cpp  Timer.h
src/WeightGenerators/: NormalRandom.cpp  NormalRandom.h  RandomGenerator.h
tests/: CMakeLists.txt  TestHelpers.h  main.cpp  mnist.cpp  test_deserialize.cpp  test_eigen.cpp  test_layers.cpp  test_loss.cpp  test_metrics.cpp  test_optimizers.cpp  trash_tests.cpp
